# cloth-online-shop

./: Cargo.toml  README.md  apiary.apib
Cloth-Online/src/: lib.rs
Cloth-Online/src/databases/: db.rs
Cloth-Online/src/handlers/: admin_cloth_handler.rs  admin_collection_handler.rs  admin_homepage_handler.rs  mod.rs  user_basket_handler.rs  user_cloth_handler.rs  user_collection_handler.rs
Cloth-Online/src/models/: mbasket.rs  mcollectioncloth.rs  mod.rs
Cloth-Online/src/repository/: mod.rs
Cloth-Online/src/routes/: admin_cloth_route.rs  admin_collection_route.rs  admin_homepage_route.rs  mod.rs  user_basket_route.rs  user_cloth_route.rs  user_collection_route.rs
Postman/: clothshop.postman_collection.json
src/: lib.rs  main.rs
src/databases/: db.rs  mod.rs
src/errors/: mod.rs
src/handlers/: admin_cloth_handler.rs  admin_collection_handler.rs  admin_homepage_handler.rs  mod.rs  user_basket_handler.rs  user_cloth_handler.rs  user_collection_handler.rs
src/models/: mbasket.rs  mcollectioncloth.rs  mod.rs
src/repository/: mod.rs
src/routes/: admin_cloth_route.rs  admin_collection_route.rs  admin_homepage_route.rs  mod.rs  user_basket_route.rs  user_cloth_route.rs  user_collection_route.rs
