[package]
name = "pototai01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.154", features=["derive"]}
serde_json = "1.0.94"
actix-http = "2.2.1"
actix-web = "3.3.2"
log = "0.4.17"
env_logger = "0.10.0"